Bug 1375452 - Fallback to DrawTarget::IntoLuminance if we can't create the effect. r=jrmuizel, a=jcristau