gfx/2d/DrawTargetD2D1.cpp
@@ -99,18 +99,21 @@ DrawTargetD2D1::Snapshot()
   return snapshot.forget();
 }
 
-void
+bool
 DrawTargetD2D1::EnsureLuminanceEffect()
 {
   if (mLuminanceEffect.get()) {
-    return;
+    return true;
   }
 
   HRESULT hr = mDC->CreateEffect(CLSID_D2D1LuminanceToAlpha,
                                  getter_AddRefs(mLuminanceEffect));
   if (FAILED(hr)) {
-    gfxWarning() << "Failed to create luminance effect. Code: " << hexa(hr);
+    gfxCriticalError() << "Failed to create luminance effect. Code: " << hexa(hr);
+    return false;
   }
+
+  return true;
 }
 
 already_AddRefed<SourceSurface>
@@ -121,7 +124,10 @@ DrawTargetD2D1::IntoLuminanceSource(LuminanceType aLuminanceType, float aOpacity
   }
 
   // Create the luminance effect
-  EnsureLuminanceEffect();
+  if (!EnsureLuminanceEffect()) {
+    return DrawTarget::IntoLuminanceSource(aLuminanceType, aOpacity);
+  }
+
   mLuminanceEffect->SetInput(0, mBitmap);
 
   RefPtr<ID2D1Image> luminanceOutput;
